// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getParamPreview should parse approval of FA1.2 token expense 1`] = `
Object {
  "amount": "20",
  "approveTo": "contractAddress1",
  "asset": Object {
    "contract": "fa12TokenAddress",
  },
  "type": "FA1_2Approve",
}
`;

exports[`getParamPreview should parse delegation operation 1`] = `
Object {
  "baker": "delegate1",
  "type": "Delegate",
}
`;

exports[`getParamPreview should parse transfer of FA1.2 token 1`] = `
Object {
  "transfers": Array [
    Object {
      "amount": "20",
      "asset": Object {
        "contract": "fa12TokenAddress",
      },
      "recipient": "address2",
    },
  ],
  "type": "Send",
}
`;

exports[`getParamPreview should parse transfer of FA2 token 1`] = `
Object {
  "transfers": Array [
    Object {
      "amount": "1000",
      "asset": Object {
        "contract": "fa2TokenAddress",
        "id": 10,
      },
      "recipient": "address2",
    },
  ],
  "type": "Send",
}
`;

exports[`getParamPreview should parse transfer of TEZ 1`] = `
Object {
  "opKind": "transaction",
  "type": "Other",
}
`;

exports[`getParamPreview should provide a fallback for contract calls 1`] = `
Object {
  "amount": "0",
  "contract": "contractAddress1",
  "entrypoint": "foo",
  "type": "ContractCall",
}
`;

exports[`getParamPreview should provide a fallback for other operations 1`] = `
Object {
  "opKind": "origination",
  "type": "Other",
}
`;
